# python-anonymization

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  anonymiser.py  config.json  constants.py  document_loader.py  embedding.py  faiss_store.py  llm_redactor.py  main.py  mcp_adapter.py  mcp_server.py  pipeline.py  pyproject.toml  query.py  rag_mcp_server.yaml  requirements.txt
tests/: conftest.py  debug_main.py  main many arguments.py  test_anonymiser.py  test_chunking.py  test_roundtrip.py
